--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@google-analytics/data": "^5.1.0",
     "@google-cloud/local-auth": "^3.0.1",
     "@mdi/js": "^7.4.47",
-    "@sitecore-marketplace-sdk/client": "^0.1.4",
-    "@sitecore-marketplace-sdk/xmc": "^0.1.4",
+    "@mdi/react": "^1.6.1",
+    "@sitecore-marketplace-sdk/client": "^0.2.2",
+    "@sitecore-marketplace-sdk/xmc": "^0.2.2",
     "@sitecore/blok-theme": "^1.1.16",
     "apexcharts": "^4.5.0",
     "framer-motion": "^12.5.0",
