--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@chakra-ui/cli": "^2.5.8",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.10.7",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@google-analytics/data": "^5.1.0",
