--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@sitecore/blok-theme": "^1.1.16",
     "apexcharts": "^4.5.0",
     "framer-motion": "^12.5.0",
-    "next": "^15.5.3",
+    "next": "15.5.7",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
